# wiki-langs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
RANKING/: CURRENT.NATION.csv
README/: AWESOME-STATS.md  SHIELDS.md  TITLES.md  TOP-LANGS.md  WORLDS.md  WORLDS–MATCHES.md
REPORTS/: DUP–BIRTHDAYS.md  DUP–NAMES.md  NATIONS.md  TITLES.md  TITLES–20.FULL.md  TITLES–20.md  WORLDS.md
countries/: names.eng.csv
event-links/: ids.0299.csv  ids.0399.csv  ids.0499.csv  ids.0999.csv  ids.1299.csv
events/: 2ac93f70-68ac-459f-8247-ddb5592f1c6e.csv  3f0c263b-9910-43c9-8856-5f02149158db.csv  d78f0bb6-dc95-4f70-8cc0-fbc308c4a7e7.csv  eba1f2f0-6ad7-4aff-9d4c-0a813420674f.csv  f3355729-6bc8-4e3d-9855-649ebb5f889b.csv  ids.0599.csv  ids.0699.csv  ids.0799.csv  ids.0899.csv  ids.0999.csv  ids.1099.csv  ids.1199.csv  ids.1299.csv  ids.1399.csv
languages/: List of ISO 639-5 codes.csv
player-links/: ids.0099.csv  ids.0199.csv  ids.0299.csv  ids.0399.csv  ids.0499.csv  ids.0599.csv  ids.0699.csv  ids.0799.csv  ids.0999.csv  ids.1099.csv  ids.1199.csv  ids.1299.csv  ids.1399.csv  ids.1499.csv  ids.1599.csv  ids.1699.csv  ids.1799.csv  ids.1899.csv  ids.1999.csv  ids.2099.csv  ids.2199.csv  ids.2299.csv  ids.2399.csv  ids.2599.csv  ids.2699.csv  ids.2799.csv  ids.2999.csv
players/: 0000.births.csv  0099.ids.csv  0199.ids.csv  0299.ids.csv  0399.ids.csv  0499.ids.csv  0599.ids.csv  0699.ids.csv  0799.ids.csv  0899.ids.csv  0999.ids.csv  1099.ids.csv  1199.ids.csv  1299.ids.csv  1399.ids.csv  1499.ids.csv  1599.ids.csv  1699.ids.csv  1799.ids.csv  1899.ids.csv  1910.births.csv  1920.births.csv  1930.births.csv  1940.births.csv  1950.births.csv  1960.births.csv  1970.births.csv  1980.births.csv  1990.births.csv  1999.ids.csv  2000.births.csv  2010.births.csv  2099.ids.csv  2199.ids.csv  2299.ids.csv  2399.ids.csv  (+171 more)
(+103 files in other folders)
