[package]
name = "wiki-langs"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
csv = "*"
html5ever = "*"
lazy_static = "*"
nanoid = "*"
regex = "*"
reqwest = "*"
scraper = "*"
select = "*"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "*"
uuid = { version = "*", features = ["v4"] }
