[package]
name = "wiki-langs"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "*"
chrono = { version = "*", features = ["serde"] }
chrono-humanize = "*"
csv = "*"
fern = "*"
html5ever = "*"
lazy_static = "*"
log = "*"
nanoid = "*"
rand = "*"
regex = "*"
reqwest = "*"
scraper = "*"
select = "*"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "*"
url = "*"
uuid = { version = "*", features = ["v4"] }
